// Copyright 2019 Zeppelin Bend Pty Ltd
// This file is part of cimbend.
// 
// cimbend is free software: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License as published by
// the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.
// 
// cimbend is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU Affero General Public License for more details.
// 
// You should have received a copy of the GNU Affero General Public License
// along with cimbend.  If not, see <https://www.gnu.org/licenses/>.


syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.zepben.protobuf.cim.iec61968.customers";
package zepben.cim.iec61968.customers;

/**
 * Kind of customer.
 */
enum CustomerKind {
    /**
     * Commercial industrial customer.
     */
    commercialIndustrial = 0;
    /**
     * Customer as energy service scheduler.
     */
    energyServiceScheduler = 1;
    /**
     * Customer as energy service supplier.
     */
    energyServiceSupplier = 2;
    /**
     * --- Missing form CIM ---
     */
    enterprise = 3;
    /**
     * Internal use customer.
     */
    internalUse = 4;
    /**
     * Other kind of customer.
     */
    other = 5;
    /**
     * Pumping load customer.
     */
    pumpingLoad = 6;
    /**
     * --- Missing form CIM ---
     */
    regionalOperator = 7;
    /**
     * Residential customer.
     */
    residential = 8;
    /**
     * Residential and commercial customer.
     */
    residentialAndCommercial = 9;
    /**
     * Residential and streetlight customer.
     */
    residentialAndStreetlight = 10;
    /**
     * Residential farm service customer.
     */
    residentialFarmService = 11;
    /**
     * Residential streetlight or other related customer.
     */
    residentialStreetlightOthers = 12;
    /**
     * --- Missing form CIM ---
     */
    subsidiary = 13;
    /**
     * Wind machine customer.
     */
    windMachine = 14;
}
